# p2pmidi

./: Cargo.toml
.github/workflows/: actions.yaml
src/: constants.rs  gui.rs  main.rs  midi.rs  settings.rs
src/p2p/: client.rs  relay.rs
