[package]
name = "p2pmidi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = {version = "4.3.19", features = ["derive"]}
clap-serde-derive = "0.2.0"
iced = "0.10.0"
iced_aw = { version = "0.6.0", default-features = false, features = ["number_input"] }
midir = "0.9.1"
rand = "0.8.5"
serde = {version = "1.0.175", features = ["derive"]}
serde_yaml = "0.9.25"
shellexpand = "3.1.0"
skim = "0.10.4"
